# rcli

./: Cargo.toml  README.md
src/: lib.rs  main.rs  opts.rs  process.rs
src/cli/: csv.rs  mod.rs
src/process/: csv_convert.rs  gen_pass.rs
